--- a/package.json
+++ b/package.json
@@ -37,22 +37,35 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@react-email/head": "^0.0.12",
+    "@react-email/html": "^0.0.11",
+    "@react-email/preview": "^0.0.13",
+    "@react-email/render": "^1.2.3",
+    "@react-email/section": "^0.0.16",
+    "@react-email/text": "^0.1.5",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "dotenv": "^17.2.2",
+    "drizzle-orm": "^0.44.5",
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
+    "jose": "^6.1.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.6",
+    "postgres": "^3.4.7",
     "react": "18.3.1",
     "react-day-picker": "9.8.0",
     "react-dom": "18.3.1",
+    "react-email": "^4.2.11",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
@@ -65,10 +78,13 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "tailwindcss": "^4",
